BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/RFRLocationIdNotFound.java
package com.example.demo.error;

public class RFRLocationIdNotFound  extends RuntimeException{
		public RFRLocationIdNotFound () {
			super("RFR locations id not found");
		}
}
